--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,32 @@
     font-family: "Arial";
 }
 
+:root{
+    --bg-color: #2c6e49;
+    --timer-color: #fdc228;
+    --header-color: #161925;
+    --input-bg-color: #4c956c;
+    --input-text-color: #fdc228;
+    --button-color: #f99d21;
+}
+
 body{
-    background-color: grey;
+    background-color: var(--bg-color);
+}
+
+.img-container{
+    display: flex;
+    justify-content: center;
+}
+
+.logo{
+    width: 40vw;
+    margin-top: 20px;
 }
 
 .header{
-    color: rgb(225, 250, 213);
-    display: flex;
-    justify-content: center;
+    color: var(--header-color);
+    font-size: 24px;
     padding: 10px;
 }
 
@@ -27,13 +45,19 @@ body{
     border-radius: 8px;
     border: none;
     width: 12vw;
+    background-color: var(--input-bg-color);
+}
+
+.input-timer::placeholder, .input-label::placeholder{
+    color: var(--input-text-color);
 }
 
 .input-label{
     padding: 8px;
     border-radius: 8px;
     border: none;
-    
+    background-color: var(--input-bg-color);
+    color:#013a1a;
 }
 
 .add-button{
@@ -42,6 +66,7 @@ body{
     border: none;
     cursor: pointer;
     border: 1px solid black;
+    background-color: var(--button-color);
 }
 
 .add-button:active{
@@ -58,6 +83,7 @@ body{
     border: none;
     cursor: pointer;
     border: 1px solid black;
+    background-color: var(--button-color);
 }
 
 .start-button:active{
@@ -81,7 +107,7 @@ body{
     flex-direction: column;
     align-items: center;
     margin: 16px 0 8px 0;
-    color: rgb(212, 235, 202);
+    color: var(--timer-color);
 }
 
 .start-container{
@@ -94,10 +120,11 @@ body{
 .timer-label{
     font-size: 24px;
     padding: 8px;
+    color: rgb(212, 235, 202);
 }
 
 .timer{
-    font-size: 38px;
+    font-size: 64px;
 }
 
 .ul-list{
@@ -108,9 +135,16 @@ body{
     margin-top: 8px;
 }
 
-.ul-list li{
+.li-timer{
     list-style: none;
     color: rgb(225, 250, 213);
+    font-size: 22px;
+}
+
+.active-timer{
+    list-style: none;
+    color: rgb(57, 199, 57);
+    font-size: 32px;
 }
 
 .close{
