--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,8 @@
     --bg-color: #0f2730;
     --timer-color: #37ebbe;
     --header-color: #ffffff;
+
+    --secondary-text-color: #ffffff;
     
     --input-bg-color: #384652;
     --input-placeholder-color: #ffffff;
@@ -44,6 +46,7 @@ body{
     padding: 10px;
     display: flex;
     justify-content: center;
+    margin-top: 20px;
 }
 
 .timer-controls{
@@ -134,28 +137,43 @@ body{
     flex-direction: column;
     align-items: center;
     gap: 8px;
-    margin-top: 8px;
+    margin: 8px 0 16px 0;
 }
 
-.li-wrapper{
-    display: flex;
-    align-items: center;
-    width: 76vw;
-    justify-content: space-between;
-    background-color:var(--input-bg-color);
-    border-radius: 8px;
-    padding: 8px;
+@media (min-width: 600px){
+    .li-wrapper{
+        display: flex;
+        align-items: center;
+        width: 350px;
+        justify-content: space-between;
+        background-color:var(--input-bg-color);
+        border-radius: 8px;
+        padding: 8px;
+    } 
 }
+
+@media (max-width: 599px){
+    .li-wrapper{
+        display: flex;
+        align-items: center;
+        width: 76vw;
+        justify-content: space-between;
+        background-color:var(--input-bg-color);
+        border-radius: 8px;
+        padding: 8px;
+    }
+}
+
 
 .li-label{
     list-style: none;
-    color: rgb(225, 250, 213);
+    color: var(--secondary-text-color);
     font-size: 16px;
 }
 
 .li-time{
     list-style: none;
-    color: rgb(255, 250, 213);
+    color: var(--secondary-text-color);
     background-color: var(--bg-color);
     border-radius: 8px;
     padding: 10px;
