--- a/styles.css
+++ b/styles.css
@@ -203,10 +203,10 @@ body{
     color: var(--popup-text-color);
     gap: 8px;
     position: fixed;
-    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    max-width: 400px;
     /* display: none; */
 }
 
